--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,12 @@
     tools:context="com.example.atack08.prueba_qr.MainActivity"
     android:orientation="vertical">
 
+    <me.dm7.barcodescanner.zxing.ZXingScannerView android:id="@+id/contenedorQR"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
+    </me.dm7.barcodescanner.zxing.ZXingScannerView>
 
     <Button
         android:layout_width="match_parent"
