--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="4dp" android:color="#00b0ff" />
-    <solid android:color="#ffffff" />
+
+    <stroke android:width="4dp" android:color="#000" />
+
+    <gradient
+        android:angle="225"
+        android:endColor="@color/azulGoogle"
+        android:startColor="@color/grisGoogle"
+        />
+
     <padding android:left="7dp" android:top="7dp"
             android:right="7dp" android:bottom="0dp" />
-    <corners android:radius="4dp" />
+    <corners android:radius="10dp" />
+
 </shape>
 
