--- a/app/src/main/res/layout/ventana_emergente.xml
+++ b/app/src/main/res/layout/ventana_emergente.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray">
+    android:background="@drawable/border">
 
     <LinearLayout
         android:layout_width="match_parent"
