--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="azulGoogle">#2196F3</color>
+    <color name="rojoGoogle">#F44336</color>
+    <color name="grisGoogle">#9E9E9E</color>
+
 </resources>
